apps/esphome/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  serviceName: esphome
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/esphome/config"
            server: 10.10.20.10
      hostNetwork: true
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:2026.9.1@sha256:776a845d508909bf426d2ee7bdd81796361ebe6a7f091807ce1d6d0b48985413
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6052
          volumeMounts:
            - name: config
              mountPath: /config
