apps/esphome/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  type: ClusterIP
  selector:
    app: esphome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6052
